--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,17 +4,15 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-
     - name: Create headers config
       run: |
         echo '/*' > _headers
@@ -22,7 +20,7 @@ jobs:
         echo '  Cross-Origin-Embedder-Policy: require-corp' >> _headers
 
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.1.5
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        branch: gh-pages
-        folder: .
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: .
